--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,7 +8,7 @@ import { SITE_TITLE } from '../consts';
 		<h2><a href="/">{SITE_TITLE}</a></h2>
 		<div class="internal-links">
 			<HeaderLink href="/">Home</HeaderLink>
-			<HeaderLink href="/blog">Projelerim</HeaderLink>
+			<HeaderLink href="/blog">Projeler</HeaderLink>
 			<HeaderLink href="/about">Hakkımda</HeaderLink>
 		</div>
 		<div class="social-links">
