--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,62 +1,69 @@
 ---
-import Layout from '../layouts/BlogPost.astro';
+import BaseHead from '../components/BaseHead.astro';
+import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
+import { SITE_TITLE } from '../consts';
 ---
 
-<Layout
-	title="About Me"
-	description="Lorem ipsum dolor sit amet"
-	pubDate={new Date('August 08 2021')}
-	heroImage="/blog-placeholder-about.jpg"
->
-	<p>
-		Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-		labore et dolore magna aliqua. Vitae ultricies leo integer malesuada nunc vel risus commodo
-		viverra. Adipiscing enim eu turpis egestas pretium. Euismod elementum nisi quis eleifend quam
-		adipiscing. In hac habitasse platea dictumst vestibulum. Sagittis purus sit amet volutpat. Netus
-		et malesuada fames ac turpis egestas. Eget magna fermentum iaculis eu non diam phasellus
-		vestibulum lorem. Varius sit amet mattis vulputate enim. Habitasse platea dictumst quisque
-		sagittis. Integer quis auctor elit sed vulputate mi. Dictumst quisque sagittis purus sit amet.
-	</p>
-
-	<p>
-		Morbi tristique senectus et netus. Id semper risus in hendrerit gravida rutrum quisque non
-		tellus. Habitasse platea dictumst quisque sagittis purus sit amet. Tellus molestie nunc non
-		blandit massa. Cursus vitae congue mauris rhoncus. Accumsan tortor posuere ac ut. Fringilla urna
-		porttitor rhoncus dolor. Elit ullamcorper dignissim cras tincidunt lobortis. In cursus turpis
-		massa tincidunt dui ut ornare lectus. Integer feugiat scelerisque varius morbi enim nunc.
-		Bibendum neque egestas congue quisque egestas diam. Cras ornare arcu dui vivamus arcu felis
-		bibendum. Dignissim suspendisse in est ante in nibh mauris. Sed tempus urna et pharetra pharetra
-		massa massa ultricies mi.
-	</p>
-
-	<p>
-		Mollis nunc sed id semper risus in. Convallis a cras semper auctor neque. Diam sit amet nisl
-		suscipit. Lacus viverra vitae congue eu consequat ac felis donec. Egestas integer eget aliquet
-		nibh praesent tristique magna sit amet. Eget magna fermentum iaculis eu non diam. In vitae
-		turpis massa sed elementum. Tristique et egestas quis ipsum suspendisse ultrices. Eget lorem
-		dolor sed viverra ipsum. Vel turpis nunc eget lorem dolor sed viverra. Posuere ac ut consequat
-		semper viverra nam. Laoreet suspendisse interdum consectetur libero id faucibus. Diam phasellus
-		vestibulum lorem sed risus ultricies tristique. Rhoncus dolor purus non enim praesent elementum
-		facilisis. Ultrices tincidunt arcu non sodales neque. Tempus egestas sed sed risus pretium quam
-		vulputate. Viverra suspendisse potenti nullam ac tortor vitae purus faucibus ornare. Fringilla
-		urna porttitor rhoncus dolor purus non. Amet dictum sit amet justo donec enim.
-	</p>
-
-	<p>
-		Mattis ullamcorper velit sed ullamcorper morbi tincidunt. Tortor posuere ac ut consequat semper
-		viverra. Tellus mauris a diam maecenas sed enim ut sem viverra. Venenatis urna cursus eget nunc
-		scelerisque viverra mauris in. Arcu ac tortor dignissim convallis aenean et tortor at. Curabitur
-		gravida arcu ac tortor dignissim convallis aenean et tortor. Egestas tellus rutrum tellus
-		pellentesque eu. Fusce ut placerat orci nulla pellentesque dignissim enim sit amet. Ut enim
-		blandit volutpat maecenas volutpat blandit aliquam etiam. Id donec ultrices tincidunt arcu. Id
-		cursus metus aliquam eleifend mi.
-	</p>
-
-	<p>
-		Tempus quam pellentesque nec nam aliquam sem. Risus at ultrices mi tempus imperdiet. Id porta
-		nibh venenatis cras sed felis eget velit. Ipsum a arcu cursus vitae. Facilisis magna etiam
-		tempor orci eu lobortis elementum. Tincidunt dui ut ornare lectus sit. Quisque non tellus orci
-		ac. Blandit libero volutpat sed cras. Nec tincidunt praesent semper feugiat nibh sed pulvinar
-		proin gravida. Egestas integer eget aliquet nibh praesent tristique magna.
-	</p>
-</Layout>
+<!doctype html>
+<html lang="tr">
+  <head>
+    <BaseHead title="Hakkımda | Yusuf Turhan" description="Yusuf Turhan - Hakkımda" />
+  </head>
+  <body>
+    <Header />
+    <main>
+      <h1>Hakkımda</h1>
+      <p>
+        Merhaba, ben <strong>Yusuf Turhan</strong>. Mobil uygulama geliştirme alanında deneyimli bir yazılım geliştiricisiyim. Dart, Flutter, Firebase ve RESTful API entegrasyonu konularında uzmanım. Temiz, ölçeklenebilir ve kullanıcı dostu arayüzler geliştirmeye odaklanıyorum. Gerçek kullanıcılarla buluşan ve mağazalarda yayınlanan mobil uygulamalarım bulunuyor.
+      </p>
+      <h2>İletişim</h2>
+      <ul>
+        <li><strong>E-posta:</strong> <a href="mailto:yusuf@turhan.dev">yusuf@turhan.dev</a></li>
+        <li><strong>GitHub:</strong> <a href="https://github.com/yusufturhan07" target="_blank">@yusufturhan07</a></li>
+        <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/yusuf-turhan/" target="_blank">linkedin.com/in/yusuf-turhan/</a></li>
+      </ul>
+      <h2>Deneyim</h2>
+      <ul>
+        <li>
+          <strong>Freelance Flutter Developer</strong> (Sep 2024 - ...)<br/>
+          Odabaşı Group CRM sisteminin mobil versiyonu, müşteri projeleri, RESTful API ve FCM entegrasyonu.
+        </li>
+        <li>
+          <strong>Software Development Intern</strong> (Jul 2024 - Aug 2024)<br/>
+          Doguş Hospitality & Retail Group – Vue.js ile responsive arayüzler, performans iyileştirmeleri.
+        </li>
+        <li>
+          <strong>Mobile Application Development Intern</strong> (Jun 2022 - Aug 2022)<br/>
+          Halkbank – Flutter ile kurumsal uygulama geliştirme, modül iyileştirme ve hata ayıklama.
+        </li>
+      </ul>
+      <h2>Projeler</h2>
+      <ul>
+        <li>
+          <strong>Paty</strong> (Nov 2024 - ...):<br/>
+          Kayıp evcil hayvan bildirimi ve sahiplenme için Flutter tabanlı mobil uygulama. App Store ve Play Store'da yayında.
+        </li>
+      </ul>
+      <h2>Yetenekler</h2>
+      <ul>
+        <li>Java, Python, JavaScript, Flutter, Vue.js</li>
+        <li>Firestore, PostgreSQL, REST API, Firebase Cloud Messaging</li>
+        <li>State Management (Provider, Bloc), Git, Agile</li>
+        <li>Takım çalışması, problem çözme, proje yönetimi</li>
+      </ul>
+      <h2>Eğitim</h2>
+      <ul>
+        <li>
+          <strong>Antalya Bilim University</strong> (Sep 2020 - Jul 2024)<br/>
+          Bilgisayar Mühendisliği, Lisans
+        </li>
+      </ul>
+      <h2>Diller</h2>
+      <ul>
+        <li>İngilizce (akıcı)</li>
+      </ul>
+    </main>
+    <Footer />
+  </body>
+</html>
