--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,36 +13,22 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 	<body>
 		<Header />
 		<main>
-			<h1>🧑‍🚀 Hoşgeldiniz 😊</h1>
+			<h1>Hoşgeldiniz</h1>
 			<p>
-				Welcome to the official <a href="https://astro.build/">Astro</a> blog starter template. This
-				template serves as a lightweight, minimally-styled starting point for anyone looking to build
-				a personal website, blog, or portfolio with Astro.
+				Merhaba, ben Yusuf Turhan. iOS ve Android için çapraz platform mobil uygulamalar geliştiren bir yazılım geliştiricisiyim. Dart, Flutter, Firebase ve RESTful API entegrasyonu konularında deneyimliyim. Temiz, ölçeklenebilir ve kullanıcı dostu arayüzler geliştirmeye odaklanıyorum. Gerçek kullanıcılarla buluşan ve mağazalarda yayınlanan mobil uygulamalarım bulunuyor.
 			</p>
 			<p>
-				This template comes with a few integrations already configured in your
-				<code>astro.config.mjs</code> file. You can customize your setup with
-				<a href="https://astro.build/integrations">Astro Integrations</a> to add tools like Tailwind,
-				React, or Vue to your project.
+				Daha önce Odabaşı Group için CRM sisteminin mobil versiyonunu Flutter ile geliştirdim, Doguş Hospitality & Retail Group ve Halkbank'ta yazılım stajları yaptım. Ayrıca, App Store ve Play Store'da canlı olan, kayıp evcil hayvan bildirimleri ve bölgesel filtreleme özellikleriyle öne çıkan Paty adlı bir uygulamanın geliştiricisiyim.
 			</p>
-			<p>Here are a few ideas on how to get started with the template:</p>
+			<p>Uzmanlık Alanlarım:</p>
 			<ul>
-				<li>Edit this page in <code>src/pages/index.astro</code></li>
-				<li>Edit the site header items in <code>src/components/Header.astro</code></li>
-				<li>Add your name to the footer in <code>src/components/Footer.astro</code></li>
-				<li>Check out the included blog posts in <code>src/content/blog/</code></li>
-				<li>Customize the blog post page layout in <code>src/layouts/BlogPost.astro</code></li>
+				<li>Flutter, Vue.js, JavaScript, Python, Java</li>
+				<li>Firestore, PostgreSQL, REST API, Firebase Cloud Messaging</li>
+				<li>Responsive ve kullanıcı odaklı arayüzler</li>
+				<li>Takım çalışması, problem çözme ve proje yönetimi</li>
 			</ul>
 			<p>
-				Have fun! If you get stuck, remember to <a href="https://docs.astro.build/"
-					>read the docs
-				</a> or <a href="https://astro.build/chat">join us on Discord</a> to ask questions.
-			</p>
-			<p>
-				Looking for a blog template with a bit more personality? Check out <a
-					href="https://github.com/Charca/astro-blog-template"
-					>astro-blog-template
-				</a> by <a href="https://twitter.com/Charca">Maxi Ferreira</a>.
+				Daha fazla bilgi almak veya iletişime geçmek için <a href="/about">Hakkımda</a> sayfasını ziyaret edebilirsiniz.
 			</p>
 		</main>
 		<Footer />
