--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,6 +18,9 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 				Merhaba, ben Yusuf Turhan. iOS ve Android için çapraz platform mobil uygulamalar geliştiren bir yazılım geliştiricisiyim. Dart, Flutter, Firebase ve RESTful API entegrasyonu konularında deneyimliyim. Temiz, ölçeklenebilir ve kullanıcı dostu arayüzler geliştirmeye odaklanıyorum. Gerçek kullanıcılarla buluşan ve mağazalarda yayınlanan mobil uygulamalarım bulunuyor.
 			</p>
 			<p>
+				Geliştiricilerinden biri ve kurucu ortağı olduğum, kayıp evcil hayvanların sahiplenilmesi ve kayıp bildirimlerinin yapılabilmesini sağlayan <strong>Paty</strong> adlı mobil uygulama, App Store ve Play Store'da yayınlanmış olup aktif olarak gelişmeye ve büyümeye devam etmektedir.
+			</p>
+			<p>
 				Daha önce Odabaşı Group için CRM sisteminin mobil versiyonunu Flutter ile geliştirdim, Doguş Hospitality & Retail Group ve Halkbank'ta yazılım stajları yaptım. Ayrıca, App Store ve Play Store'da canlı olan, kayıp evcil hayvan bildirimleri ve bölgesel filtreleme özellikleriyle öne çıkan Paty adlı bir uygulamanın geliştiricisiyim.
 			</p>
 			<p>Uzmanlık Alanlarım:</p>
