--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -19,6 +19,7 @@ const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props;
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 <link rel="icon" type="image/png" href="/favicon.png" />
+<link rel="mask-icon" href="/favicon.svg" color="#000000" />
 <meta name="generator" content={Astro.generator} />
 
 <!-- Font preloads -->
